--- a/resources/srs-gen-baseline/docs/2000 - nasa x38.doc.md
+++ b/resources/srs-gen-baseline/docs/2000 - nasa x38.doc.md
@@ -3,7 +3,8 @@ Here is a comprehensive Software Requirements Specification (SRS) document for t
 # Software Requirements Specification
 ## For
 # Fault Tolerant System Services (FTSS)
-## X-38 Crew Return Vehicle Flight Computer
+## X-38 Crew Return Vehicle
+### Flight Critical Computer System
 
 **Version:** 1.0
 **Date:** October 26, 2023
@@ -30,18 +31,17 @@ This document provides a detailed description of the Software Requirements Speci
 The FTSS provides the critical software services necessary to enable the quad-redundant operation of the Flight Critical Computer (FCC) system. Its core responsibilities include:
 - Managing system scheduling across various vehicle modes.
 - Facilitating inter-processor communication.
-- Providing fault detection, isolation, and recovery.
+- Providing comprehensive fault detection, isolation, and recovery.
 - Managing system redundancy.
-- Performing memory management operations.
-- Maintaining highly accurate and synchronized time services.
+- Performing memory management and scrubbing.
+- Maintaining precise, synchronized time services.
 
-**Out of Scope:** The FTSS specification explicitly excludes hardware design and the development of specific flight application code. It is a middleware layer upon which such applications are built.
+**Out of Scope:** This specification does not cover the design of underlying hardware, the development of specific flight application code, or the user interface for ground personnel.
 
 ### 1.3 Definitions, Acronyms, and Abbreviations
 
 | Acronym | Definition |
 | :--- | :--- |
-| **API** | Application Programming Interface |
 | **BIT** | Built-In Test |
 | **CBIT** | Continuous Built-In Test |
 | **FCC** | Flight Critical Computer |
@@ -60,147 +60,148 @@ The FTSS provides the critical software services necessary to enable the quad-re
 
 ### 1.4 References
 *   X-38 Avionics System Architecture Document
-*   Draper FTPP Architecture Specification
+*   Draper Laboratory FTPP Technical Description
 *   Radstone Power PC 604R Hardware Manual
 *   VxWorks 5.4 Programmer's Guide
 
 ## 2. Overall Description
 
 ### 2.1 Product Perspective
-The FTSS is the foundational software layer within the X-38 avionics architecture. It is built upon Draper's Fault Tolerant Parallel Processor (FTPP) architecture and operates directly on the VxWorks 5.4 real-time operating system, which runs on Radstone Power PC 604R hardware.
-
-The system operates as a quad-redundant virtual group across four Flight Critical Processors (FCPs). It interfaces with five Instrument Control Processors (ICPs) and manages communication through five independent Network Elements (NEs), providing a robust, fault-tolerant platform for the vehicle's flight software.
+The FTSS is the foundational software layer within the X-38 avionics architecture, built upon Draper's Fault Tolerant Parallel Processor (FTPP) architecture. It operates on four Flight Critical Processors (FCPs), which function as a single, quad-redundant virtual group. The system interfaces with five Instrument Control Processors (ICPs) and manages communication across five Network Elements (NEs). It sits directly on the VxWorks 5.4 operating system, abstracting the complexity of fault tolerance for the upper-layer flight application software.
 
 ### 2.2 Product Functions
 The high-level functions of the FTSS are:
-1.  **Scheduling Services:** Manage and schedule task execution.
-2.  **Communication Services:** Enable data exchange between processors.
-3.  **Fault Management:** Detect, isolate, and recover from faults.
-4.  **Redundancy Management:** Manage processor and network element failures.
-5.  **Memory Management:** Ensure memory integrity and alignment.
-6.  **Time Services:** Provide and synchronize mission time across the system.
+1.  **Scheduling Services:** Manage deterministic execution of tasks.
+2.  **Communication Services:** Provide transparent data exchange between processors.
+3.  **Fault Tolerance:** Detect, isolate, and recover from hardware faults.
+4.  **Redundancy Management:** Manage processor and network element states (active, failed, reintegrating).
+5.  **Memory Management:** Ensure data integrity through scrubbing and alignment.
+6.  **Time Services:** Maintain synchronized, high-accuracy mission time.
 
 ### 2.3 User Characteristics
-The primary users of the FTSS are:
-*   **NASA Flight Operations Personnel:** Interact with the system during pre-flight initialization and monitoring. They are highly trained experts in vehicle systems.
-*   **System Maintainers:** Responsible for post-flight analysis and system diagnostics. They possess deep technical knowledge of the FCC and FTSS.
-
-During normal flight operations, the system is designed to function autonomously without any user interaction.
+The primary users are **NASA flight operations personnel** and **system maintainers**. These users are highly trained experts in aerospace systems but do not interact with the FTSS during normal vehicle operation. Their interaction is limited to pre-flight initialization, monitoring system health telemetry, and post-flight analysis.
 
 ### 2.4 Operating Environment
 *   **Hardware:** Radstone Power PC 604R processors.
 *   **Operating System:** VxWorks 5.4.
 *   **Memory Constraints:** Must operate within 3 MB of ROM and 9 MB of DRAM.
-*   **System Architecture:** Must be compatible with the existing X-38 avionics architecture and support operation with any 3 of 5 active Fault Containment Regions (FCRs).
+*   **System Topology:** 4 Flight Critical Processors (FCPs), 5 Instrument Control Processors (ICPs), and 5 Network Elements (NEs).
 
-### 2.5 Design and Implementation Constraints
-*   The software must be implemented in C/C++ for the specified Power PC platform.
-*   The design must adhere to the Draper FTPP architectural principles.
-*   The system must be fully compatible with the existing X-38 flight software application programming interface (API).
-
-### 2.6 Assumptions and Dependencies
-*   It is assumed that the underlying VxWorks OS and Radstone hardware function as specified.
-*   The system's fault tolerance is dependent on the integrity of the hardware FCRs.
-*   The system depends on the correct functioning of the five Network Elements for full redundancy.
+### 2.5 Assumptions and Dependencies
+*   The system assumes operation on the specified Radstone hardware and VxWorks OS.
+*   The system is dependent on the correct functioning of the underlying FTPP architecture.
+*   It is assumed that no more than two non-simultaneous hardware faults will occur during a single mission.
+*   The system must remain operational with any 3 of the 5 active Fault Containment Regions (FCRs).
 
 ## 3. System Features
 
-This section details the functional requirements of the FTSS.
-
 ### 3.1 Scheduling Services
 
-| ID | Requirement |
-| :--- | :--- |
-| **SCH-001** | The system shall manage task execution in predefined rate groups of 50Hz, 10Hz, and 1Hz. |
-| **SCH-002** | The system shall support multiple vehicle modes of operation (e.g., pre-flight, ascent, re-entry). |
-| **SCH-003** | The system shall complete a transition between any two vehicle modes within 1.02 seconds. |
+#### 3.1.1 Description
+Manages the execution of application tasks across all operational FCPs, ensuring deterministic behavior and synchronization. Tasks are organized into rate groups based on their required execution frequency.
+
+#### 3.1.2 Requirements
+*   **FTSS-SCHED-001:** The system shall manage task execution in 50Hz, 10Hz, and 1Hz rate groups.
+*   **FTSS-SCHED-002:** The system shall complete a vehicle mode change, including all associated task scheduling adjustments, within 1.02 seconds.
+*   **FTSS-SCHED-003:** Task scheduling shall be synchronized across all active FCPs within the virtual group.
 
 ### 3.2 Communication Services
 
-| ID | Requirement |
-| :--- | :--- |
-| **COM-001** | The system shall provide synchronous message queues for inter-processor communication. |
-| **COM-002** | The system shall provide immediate pipes for low-latency, high-priority communication. |
-| **COM-003** | The system shall provide transparent communication between virtual groups, abstracting the underlying physical network from the application. |
+#### 3.2.1 Description
+Provides robust and transparent mechanisms for inter-processor communication (IPC) between FCPs, and between FCPs and ICPs, masking faults from the application layer.
 
-### 3.3 Fault Detection and Isolation
+#### 3.2.2 Requirements
+*   **FTSS-COMM-001:** The system shall provide synchronous message queues for guaranteed, ordered data delivery.
+*   **FTSS-COMM-002:** The system shall provide immediate pipes for low-latency, non-guaranteed data transfer.
+*   **FTSS-COMM-003:** Communication between virtual groups shall be transparent to the application software.
 
-| ID | Requirement |
-| :--- | :--- |
-| **FDI-001** | The system shall perform an Initial Built-In Test (IBIT) during system startup to verify the health of all critical components. |
-| **FDI-002** | The system shall perform a Continuous Built-In Test (CBIT) during normal operation to monitor for runtime faults. |
-| **FDI-003** | The system shall be capable of isolating a faulty processor or network element to a single Fault Containment Region (FCR). |
+### 3.3 Fault Detection, Isolation, and Recovery (FDIR)
 
-### 3.4 Redundancy Management
+#### 3.3.1 Description
+Continuously monitors the health of processors and network elements to detect faults, isolate faulty components, and recover system functionality to a fully redundant state.
 
-| ID | Requirement |
-| :--- | :--- |
-| **RED-001** | The system shall mask (hide) a single failed FCP or NE from the application layer. |
-| **RED-002** | The system shall attempt recovery of a transiently failed processor. |
-| **RED-003** | The system shall support the reintegration of a recovered processor back into the operational virtual group, provided it passes health checks. |
-| **RED-004** | The system shall remain operational with any 3 of the 5 active FCRs functioning correctly. |
+#### 3.3.2 Requirements
+*   **FTSS-FDIR-001:** The system shall perform an Initial Built-In Test (IBIT) on all FCPs and NEs upon system startup.
+*   **FTSS-FDIR-002:** The system shall perform Continuous Built-In Test (CBIT) during normal operation.
+*   **FTSS-FDIR-003:** Upon fault detection, the system shall isolate the faulty FCP or NE from the active virtual group.
+*   **FTSS-FDIR-004:** The system shall support the reintegration of a recovered FCP or NE back into the active virtual group after successful testing.
+*   **FTSS-FDIR-005:** The system shall be capable of masking a minimum of two non-simultaneous hardware faults without loss of critical system function.
 
-### 3.5 Memory Management
+### 3.4 Memory Management
 
-| ID | Requirement |
-| :--- | :--- |
-| **MEM-001** | The system shall perform memory scrubbing at a rate sufficient to process 10 Megabytes of memory every 8 minutes to detect and correct memory errors. |
-| **MEM-002** | The system shall ensure memory alignment across all FCPs during a recovery or reintegration process. |
+#### 3.4.1 Description
+Ensures the integrity of data in memory through periodic scrubbing to correct soft errors and realigns memory during processor recovery.
 
-### 3.6 Time Services
+#### 3.4.2 Requirements
+*   **FTSS-MEM-001:** The system shall perform memory scrubbing at a minimum rate of 10 Megabytes every 8 minutes.
+*   **FTSS-MEM-002:** During the reintegration of a recovered FCP, the system shall perform memory alignment to synchronize its state with the active virtual group.
 
-| ID | Requirement |
-| :--- | :--- |
-| **TIME-001** | The system shall maintain a Mission Elapsed Time (MET) clock. |
-| **TIME-002** | The system shall maintain a Separation Elapsed Time (SEP) clock. |
-| **TIME-003** | The MET and SEP clocks shall have an accuracy of 50 Parts Per Million (PPM). |
-| **TIME-004** | The MET and SEP clocks shall be congruent (synchronized in value) across all operational FCPs. |
+### 3.5 Time Services
+
+#### 3.5.1 Description
+Provides a synchronized, high-accuracy time reference for the entire FCC system, used for scheduling, communication, and data timestamping.
+
+#### 3.5.2 Requirements
+*   **FTSS-TIME-001:** The system shall provide Mission Elapsed Time (MET).
+*   **FTSS-TIME-002:** The system shall provide Separation Elapsed Time (SEP).
+*   **FTSS-TIME-003:** MET and SEP shall maintain an accuracy of 50 Parts Per Million (PPM).
+*   **FTSS-TIME-004:** The time shall be congruent across all FCPs in the virtual group.
 
 ## 4. External Interface Requirements
 
 ### 4.1 Software Interfaces
-*   **Application API:** The FTSS shall provide a well-defined API for flight applications to access scheduling, communication, and time services.
-*   **VxWorks 5.4:** The system shall interface with the VxWorks 5.4 operating system for core services such as task management and hardware abstraction.
+*   **Application Programming Interface (API):** The FTSS shall provide a well-defined API for the flight application software to access scheduling, communication, and time services.
+*   **VxWorks 5.4:** The system is dependent on the VxWorks 5.4 real-time operating system for core OS services.
 
 ### 4.2 Hardware Interfaces
-*   **Radstone Power PC 604R:** The software is built to execute on this specific processor family.
-*   **Network Elements (NEs):** The system shall manage communication across five independent NEs.
-*   **FCP-ICP Communication Link:** The system shall manage the communication link between the Flight Critical Processors and the Instrument Control Processors.
-*   **Multi-Protocol Communications Controller (MPCC):** The system shall interface with the MPCC for network communication.
+*   **Radstone Power PC 604R:** The software is designed to execute on this specific hardware platform.
+*   **Network Elements (NEs):** The FTSS shall manage communication through five independent NEs.
+*   **FCP-ICP Communication Link:** The system shall interface with five Instrument Control Processors (ICPs) via a dedicated communication link.
+*   **Multi-Protocol Communications Controller (MPCC):** The system shall utilize the MPCC for network communication management.
 
 ## 5. Non-Functional Requirements
 
 ### 5.1 Performance Requirements
+*   **FTSS-PERF-001:** The system shall complete scheduling mode changes within **1.02 seconds**.
+*   **FTSS-PERF-002:** The clock skew between any two FCPs shall not exceed **330 microseconds**.
+*   **FTSS-PERF-003:** Memory scrubbing shall process data at a sustained rate of **10 MB per 8 minutes**.
+*   **FTSS-PERF-004:** The system shall recover from a fault and reconfigure to a stable, redundant state within **1.5 minutes**.
 
-| ID | Requirement |
-| :--- | :--- |
-| **PERF-001** | The system shall tolerate up to two non-simultaneous hardware faults during a single mission. |
-| **PERF-002** | The system shall complete vehicle mode changes within 1.02 seconds. |
-| **PERF-003** | The clock skew between any two synchronized FCPs shall not exceed 330 microseconds. |
-| **PERF-004** | The memory scrubbing process shall sustain a rate of 10 Megabytes every 8 minutes. |
-| **PERF-005** | The MET and SEP time services shall maintain an accuracy of 50 PPM. |
+### 5.2 Reliability & Availability Requirements
+*   **FTSS-RELY-001:** The system shall be capable of tolerating **two non-simultaneous hardware faults** during a mission without catastrophic failure.
+*   **FTSS-RELY-002:** The system shall maintain availability for critical functions with any 3 of 5 active FCRs.
 
-### 5.2 Safety Requirements
-The system is safety-critical. Its design and implementation shall ensure that no single point of failure can lead to a loss of the vehicle. The fault tolerance mechanisms are the primary means of ensuring safety.
+### 5.3 Safety Requirements
+*   **FTSS-SAFE-001:** The system shall ensure that a single point of failure in either hardware or software does not lead to a loss of the vehicle or crew.
 
-### 5.3 Software Quality Attributes
-
-*   **Reliability:** The system must have a Mean Time Between Failures (MTBF) consistent with manned spaceflight standards.
-*   **Availability:** The system must be available for operation throughout the entire mission duration, even in the presence of faults.
-*   **Maintainability:** The software shall be modular and well-documented to facilitate troubleshooting and post-flight analysis.
+### 5.4 Software Quality Attributes
+*   **Maintainability:** The software shall be modular to allow for updates and maintenance of individual services.
+*   **Portability:** While currently specific to Radstone/VxWorks, the design shall minimize direct hardware dependencies where possible.
 
 ## 6. Other Requirements
 
-### 6.1 Priorities
-The following requirements are considered critical and are assigned the highest priority:
-*   Fault Tolerance (ability to tolerate two faults)
-*   Inter-processor synchronization (≤330 µs skew)
-*   Recovery time objectives
+### 6.1 Constraints
+*   The software must fit within **3 MB of ROM** and **9 MB of DRAM**.
+*   Must be compatible with the existing X-38 avionics architecture and flight software.
+*   Development and testing must adhere to NASA software safety and quality standards (e.g., NASA-STD-8739.8).
 
-### 6.2 Acceptance Approach
-Final acceptance of the FTSS software shall be contingent upon the successful demonstration of the following:
-1.  **Fault Tolerance Demonstration:** The system must be shown to correctly mask, recover from, and reintegrate components after two non-simultaneous fault injections without violating safety or performance constraints.
-2.  **Timing Constraint Verification:** All specified timing requirements (mode change, synchronization skew, memory scrubbing rate) must be verified through rigorous testing.
-3.  **Recovery Time Verification:** The system must demonstrate the ability to recover from a fault and resume normal operation within 1.5 minutes.
+### 6.2 Acceptance Criteria
+Formal acceptance of the FTSS software shall require successful demonstration of the following:
+1.  **Fault Tolerance:** Verification that the system meets all FDIR requirements, including handling two non-simultaneous faults.
+2.  **Timing Constraints:** Validation that all performance requirements (scheduling, synchronization, recovery time) are met under worst-case scenarios.
+3.  **Functional Correctness:** All core features (scheduling, communication, time services, memory management) operate as specified.
 
-Verification shall be achieved through a combination of testing, analysis, and inspection methods as detailed in a separate Verification and Validation (V&V) plan.
+### 6.3 Verification Approach
+Verification of these requirements shall be achieved through a combination of:
+*   **Testing:** Unit, integration, and system-level testing on target hardware.
+*   **Analysis:** Timing analysis, fault tree analysis (FTA), and failure modes and effects analysis (FMEA).
+*   **Inspection:** Formal code and design reviews.
+
+---
+**Document Approval:**
+
+| Name | Role | Signature | Date |
+| :--- | :--- | :--- | :--- |
+| | Project Manager | | |
+| | Chief Engineer | | |
+| | Software Lead | | |
