--- a/resources/srs-gen-baseline/docs/2001 - hats.pdf.md
+++ b/resources/srs-gen-baseline/docs/2001 - hats.pdf.md
@@ -1,6 +1,6 @@
 ```markdown
 # Software Requirements Specification (SRS)
-## HATS-GUI (High Assurance Transformation System Graphical User Interface)
+## HATS-GUI: High Assurance Transformation System Graphical User Interface
 
 **Version:** 1.0  
 **Date:** [Current Date]  
@@ -16,6 +16,7 @@
 4. [External Interface Requirements](#4-external-interface-requirements)
 5. [Non-Functional Requirements](#5-non-functional-requirements)
 6. [Constraints, Assumptions & Dependencies](#6-constraints-assumptions--dependencies)
+7. [Acceptance Criteria](#7-acceptance-criteria)
 
 ---
 
@@ -31,7 +32,7 @@ HATS-GUI provides a comprehensive graphical interface that simplifies user inter
 - Implementation of transformation logic (handled by HATS-SML)
 - Management of HATS-SML installation
 - Multi-user support
-- Extensive help system for novice users
+- Extensive help system or tutorials
 
 ### 1.3 Definitions & Acronyms
 
@@ -39,14 +40,14 @@ HATS-GUI provides a comprehensive graphical interface that simplifies user inter
 |------|------------|
 | HATS | High Assurance Transformation System |
 | SDT | Syntax Directed Translation |
-| SML | Standard Meta Language |
+| SML | Standard ML |
 | GUI | Graphical User Interface |
 | JVM | Java Virtual Machine |
 
 ## 2. Overall Description
 
 ### 2.1 Product Perspective
-HATS-GUI is a Java-based front-end component that interfaces with the existing HATS-SML transformation engine. It replaces a prototype system that lacked portability and adequate output display capabilities.
+HATS-GUI operates as the front-end component of the HATS ecosystem, interacting with HATS-SML (back-end transformation engine) and the host operating system. The system architecture follows a client-server model where HATS-GUI acts as the client to HATS-SML services.
 
 ### 2.2 Product Functions
 - **Application Management**: Create, open, save, and delete transformation applications
@@ -62,10 +63,10 @@ HATS-GUI is a Java-based front-end component that interfaces with the existing H
 - Formal methods and program transformation
 - Advanced software engineering concepts
 
-**User Expertise Assumptions:**
+**User Expertise:**
+- No extensive help messages required
 - Familiar with transformation concepts and terminology
-- Technical proficiency with development tools
-- No requirement for extensive help messages or tutorials
+- Comfortable with complex software interfaces
 
 ### 2.4 Operating Environment
 **Supported Platforms:**
@@ -73,7 +74,7 @@ HATS-GUI is a Java-based front-end component that interfaces with the existing H
 - Solaris
 - Linux
 
-**Required Software Dependencies:**
+**Required Software:**
 - Java Virtual Machine (JVM)
 - ML interpreter
 - HATS-SML version 2.0
@@ -91,65 +92,89 @@ HATS-GUI is a Java-based front-end component that interfaces with the existing H
 #### 3.1.1 Description
 Users can create, open, save, and delete transformation applications containing programs and target files.
 
-#### 3.1.2 Requirements
-- **FR-AM-001**: The system shall allow creation of new transformation applications
-- **FR-AM-002**: The system shall allow opening existing applications from file system
-- **FR-AM-003**: The system shall allow saving applications to persistent storage
-- **FR-AM-004**: The system shall allow deletion of applications with confirmation
+#### 3.1.2 Functional Requirements
+
+| ID | Requirement | Priority |
+|----|-------------|----------|
+| AM-001 | The system shall allow creation of new transformation applications | High |
+| AM-002 | The system shall allow opening existing applications from file system | High |
+| AM-003 | The system shall allow saving applications to persistent storage | High |
+| AM-004 | The system shall allow deletion of applications with confirmation | Medium |
+| AM-005 | The system shall maintain application state between sessions | Medium |
 
 ### 3.2 Program Parsing
 
 #### 3.2.1 Description
 The system parses transformation language programs and target files to validate syntax and prepare for execution.
 
-#### 3.2.2 Requirements
-- **FR-PP-001**: The system shall parse transformation language programs for syntactic correctness
-- **FR-PP-002**: The system shall parse target files for compatibility with transformation programs
-- **FR-PP-003**: The system shall provide error messages for parsing failures
+#### 3.2.2 Functional Requirements
+
+| ID | Requirement | Priority |
+|----|-------------|----------|
+| PP-001 | The system shall parse transformation language programs for syntax validation | High |
+| PP-002 | The system shall parse target files for compatibility checking | High |
+| PP-003 | The system shall provide detailed error messages for parsing failures | Medium |
+| PP-004 | The system shall maintain parsed representations in memory | High |
 
 ### 3.3 Transformation Execution
 
 #### 3.3.1 Description
-Users can execute transformation programs on target files, with results displayed in both SDT and pretty-printed formats.
+Users can execute transformation programs through integration with HATS-SML, with support for concurrent operations.
 
-#### 3.3.2 Requirements
-- **FR-TE-001**: The system shall execute transformation programs via HATS-SML
-- **FR-TE-002**: The system shall display transformation progress to the user
-- **FR-TE-003**: The system shall allow cancellation of ongoing transformations
-- **FR-TE-004**: The system shall support concurrent operations during transformation execution
+#### 3.3.2 Functional Requirements
 
-### 3.4 SDT Output Display & Manipulation
+| ID | Requirement | Priority |
+|----|-------------|----------|
+| TE-001 | The system shall execute transformation programs via HATS-SML | High |
+| TE-002 | The system shall allow users to continue working during transformation execution | High |
+| TE-003 | The system shall display transformation progress and status | Medium |
+| TE-004 | The system shall handle transformation failures gracefully | Medium |
+| TE-005 | The system shall capture and display transformation results | High |
+
+### 3.4 SDT Output Display
 
 #### 3.4.1 Description
-The system displays SDT outputs as graphical tree structures with configurable visualization parameters.
+The system displays Syntax Directed Translation outputs with configurable visualization settings.
 
-#### 3.4.2 Requirements
-- **FR-SDT-001**: The system shall display SDT structures as expandable/collapsible trees
-- **FR-SDT-002**: The system shall support node expansion/collapse operations
-- **FR-SDT-003**: The system shall provide search functionality within SDT structures
-- **FR-SDT-004**: The system shall display 10,000-node SDTs within 5 seconds
-- **FR-SDT-005**: The system shall display 1,000,000-node SDTs within 7 seconds
+#### 3.4.2 Functional Requirements
+
+| ID | Requirement | Priority |
+|----|-------------|----------|
+| SD-001 | The system shall display SDT structures graphically | High |
+| SD-002 | The system shall allow expansion/collapse of SDT nodes | High |
+| SD-003 | The system shall support configurable color schemes for SDT display | Medium |
+| SD-004 | The system shall support configurable node shapes | Medium |
+| SD-005 | The system shall allow control of expansion levels | Medium |
+| SD-006 | The system shall display 10,000-node SDTs within 5 seconds | High |
+| SD-007 | The system shall display 1,000,000-node SDTs within 7 seconds | High |
 
 ### 3.5 Pretty-Printed Text Display
 
 #### 3.5.1 Description
-The system displays transformation results as formatted, readable text output.
+The system displays pretty-printed text outputs with search and manipulation capabilities.
 
-#### 3.5.2 Requirements
-- **FR-PP-001**: The system shall display pretty-printed text outputs
-- **FR-PP-002**: The system shall provide text search capabilities
-- **FR-PP-003**: The system shall support text navigation and selection
+#### 3.5.2 Functional Requirements
 
-### 3.6 Display Configuration
+| ID | Requirement | Priority |
+|----|-------------|----------|
+| PT-001 | The system shall display pretty-printed text outputs | High |
+| PT-002 | The system shall allow text search within outputs | Medium |
+| PT-003 | The system shall support text navigation and scrolling | Medium |
+| PT-004 | The system shall maintain text formatting and structure | High |
+
+### 3.6 Search Functionality
 
 #### 3.6.1 Description
-Users can customize SDT visualization parameters including colors, shapes, and expansion levels.
+Users can search across both SDT structures and text outputs for specific patterns or content.
 
-#### 3.6.2 Requirements
-- **FR-DC-001**: The system shall allow configuration of SDT node colors
-- **FR-DC-002**: The system shall allow configuration of SDT node shapes
-- **FR-DC-003**: The system shall allow setting default expansion levels
-- **FR-DC-004**: The system shall persist display settings between sessions
+#### 3.6.2 Functional Requirements
+
+| ID | Requirement | Priority |
+|----|-------------|----------|
+| SF-001 | The system shall provide search functionality for SDT structures | Medium |
+| SF-002 | The system shall provide search functionality for text outputs | Medium |
+| SF-003 | The system shall highlight search results in both SDT and text views | Medium |
+| SF-004 | The system shall support case-sensitive and insensitive search options | Low |
 
 ## 4. External Interface Requirements
 
@@ -171,90 +196,127 @@ Edit
   → Copy
   → Paste
 
-Transform
-  → Parse Program
-  → Execute Transformation
-  → Cancel Transformation
-
 View
-  → SDT Display
-  → Text Display
-  → Display Settings
+  → SDT Display Settings
+  → Text Display Settings
+  → Refresh
+
+Transform
+  → Execute Transformation
+  → Stop Transformation
 
 Search
   → Find in SDT
   → Find in Text
+  → Find Next
+
+Help
+  → About
 ```
 
 ### 4.2 Hardware Interfaces
-- None specified (platform-independent Java implementation)
+- No specific hardware requirements beyond standard desktop capabilities
+- Sufficient RAM for large SDT processing (minimum 256MB recommended)
 
 ### 4.3 Software Interfaces
 
 #### 4.3.1 HATS-SML Interface
-- **Interface Type**: Process execution with file-based I/O
+- **Interface Type**: Process execution with file-based communication
 - **Version**: HATS-SML 2.0
-- **Protocol**: Command execution with parameter passing
-- **Data Exchange**: File-based input/output for transformation programs and results
+- **Protocol**: Command-line invocation with parameter passing
+- **Data Exchange**: File-based input/output
 
 #### 4.3.2 Operating System Interface
-- **Functions**: File I/O, process management, system resource access
-- **Supported**: Windows 2000, Solaris, Linux
+- **File System**: Hierarchical file system access for application storage
+- **Process Management**: Spawn and manage HATS-SML processes
+- **Platform Services**: Window management, event handling
 
 ### 4.4 Communication Interfaces
-- None required (local system operation only)
+- Local process communication only
+- No network communication requirements
 
 ## 5. Non-Functional Requirements
 
 ### 5.1 Performance Requirements
 
 #### 5.1.1 SDT Display Performance
-- **NFR-PERF-001**: Display of 10,000-node SDT shall complete within 5 seconds
-- **NFR-PERF-002**: Display of 1,000,000-node SDT shall complete within 7 seconds (±2 seconds)
-- **NFR-PERF-003**: User interface shall remain responsive during transformation execution
+- **10,000-node SDTs**: Display within 5 seconds
+- **1,000,000-node SDTs**: Display within 7 seconds (±2 seconds)
+- **Memory Usage**: Efficient algorithms to avoid excessive memory consumption
 
-#### 5.1.2 Memory Efficiency
-- **NFR-MEM-001**: SDT display algorithms shall avoid excessive memory consumption
-- **NFR-MEM-002**: The system shall handle large SDT structures without crashing
+#### 5.1.2 Responsiveness
+- User interface must remain responsive during transformation execution
+- Maximum 100ms response time for user interface actions
+- Background processing for long-running transformations
 
 ### 5.2 Platform Independence
-- **NFR-PLAT-001**: The system shall run on Windows 2000 without code modifications
-- **NFR-PLAT-002**: The system shall run on Solaris without code modifications
-- **NFR-PLAT-003**: The system shall run on Linux without code modifications
+- **Requirement**: Run identically on Windows 2000, Solaris, and Linux without code modifications
+- **Implementation**: Pure Java implementation
+- **Testing**: Verification on all target platforms required
 
-### 5.3 Usability
-- **NFR-USE-001**: The interface shall be intuitive for expert transformation developers
-- **NFR-USE-002**: Minimal learning curve for users familiar with transformation concepts
-- **NFR-USE-003**: Concurrent operation capability during long-running transformations
+### 5.3 Reliability
+- No data loss during normal operation
+- Graceful handling of HATS-SML failures
+- Automatic recovery from transient errors
 
-### 5.4 Reliability
-- **NFR-REL-001**: The system shall handle parsing errors gracefully
-- **NFR-REL-002**: The system shall recover from HATS-SML execution failures
-- **NFR-REL-003**: File operations shall include error checking and recovery
+### 5.4 Usability
+- Intuitive interface for expert users
+- Minimal learning curve for transformation experts
+- Consistent interaction patterns
+- No extensive help system required
+
+### 5.5 Maintainability
+- Modular design for easy maintenance
+- Clear separation between GUI logic and transformation services
+- Comprehensive documentation
 
 ## 6. Constraints, Assumptions & Dependencies
 
 ### 6.1 Constraints
-- **CON-001**: Single-user operation only
-- **CON-002**: Requires hierarchical file system
-- **CON-003**: Must run on same system as HATS-SML
-- **CON-004**: Java implementation required for platform independence
+- Must use Java for implementation
+- Single-user operation only
+- Requires HATS-SML version 2.0 availability by October 2001
+- Must run on same system as HATS-SML
 
 ### 6.2 Assumptions
-- **ASM-001**: Users have technical expertise in transformation-based development
-- **ASM-002**: JVM and ML interpreter are pre-installed on target systems
-- **ASM-003**: HATS-SML version 2.0 will be available by October 2001
+- Users have expertise in transformation-based development
+- JVM and ML interpreter are pre-installed on target systems
+- Hierarchical file system is available
+- Adequate system resources are available for large SDT processing
 
 ### 6.3 Dependencies
-- **DEP-001**: Availability of HATS-SML version 2.0
-- **DEP-002**: Java Virtual Machine compatibility across target platforms
-- **DEP-003**: ML interpreter availability on target systems
+- **HATS-SML 2.0**: Critical dependency for transformation execution
+- **Java Runtime Environment**: Required for platform independence
+- **ML Interpreter**: Required for HATS-SML operation
 
-### 6.4 Acceptance Criteria
-- **ACC-001**: SDT display performance targets met across all supported platforms
-- **ACC-002**: Platform independence verified on Windows 2000, Solaris, and Linux
-- **ACC-003**: Concurrent operation capability demonstrated during transformation execution
-- **ACC-004**: All functional requirements implemented and tested
+## 7. Acceptance Criteria
+
+### 7.1 Critical Success Factors
+
+#### 7.1.1 Platform Independence
+- **Acceptance Test**: Application must run without modification on:
+  - Windows 2000
+  - Solaris 8+
+  - Linux (Red Hat 7.0+)
+
+#### 7.1.2 Performance Metrics
+- **Acceptance Test**: SDT display performance:
+  - 10,000 nodes: ≤5 seconds on all platforms
+  - 1,000,000 nodes: 5-9 seconds on all platforms
+
+#### 7.1.3 Concurrent Operations
+- **Acceptance Test**: User must be able to perform other operations while transformations execute
+- **Verification**: No UI blocking during transformation execution
+
+### 7.2 Functional Acceptance
+- All core features from Section 3 must be implemented and operational
+- Integration with HATS-SML must be seamless and reliable
+- Error handling must be robust and informative
+
+### 7.3 Documentation
+- User manual for expert users
+- Installation guide covering platform-specific requirements
+- Technical documentation for maintenance
 
 ---
 
@@ -264,10 +326,12 @@ Search
 |---------|------|--------|---------|
 | 1.0 | [Date] | [Author] | Initial SRS document |
 
-## Appendix B: Open Issues
-- Final performance benchmarking methodology
-- Specific JVM version requirements
-- Detailed error message catalog
+## Appendix B: References
+
+1. HATS System Architecture Document
+2. HATS-SML 2.0 Interface Specification
+3. Java Platform Requirements
+4. Target Platform Specifications
 ```
 
-This SRS document provides a comprehensive specification following IEEE 830 standards, with clear functional and non-functional requirements, interface specifications, and acceptance criteria. The markdown formatting ensures readability while maintaining professional technical documentation standards.
+*This SRS document provides a comprehensive specification for the HATS-GUI system, covering all functional and non-functional requirements, interface specifications, and acceptance criteria necessary for successful implementation and deployment.*
